Perfectly fixed navdrawer will be overwritten on ios by same z-index

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -2,6 +2,7 @@
 
 @include _reset;
 @include _font;
+@include drawer-overlay-layer;
 
 html,
 body,
